[package]
name = "monerod-exporter"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
config = { version = "0.11", default-features = false, features = ["toml"] }
dirs = "3.0"
humantime = "2.1"
reqwest = { version = "0.11", default-features = false, features = ["native-tls", "json"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1.6", default-features = false, features = ["macros", "net", "rt", "time"] }
tracing = "0.1"
tracing-subscriber = "0.2"
warp = { version = "0.3", default-features = false, features = ["tls"] }
